--- a/styles.css
+++ b/styles.css
@@ -155,11 +155,11 @@ body {
   color: hsl(228, 45%, 44%);
 }
 @media screen and (min-width: 1170px) {
-  /* body {
-    /* max-height: 100vh; 
-  } */
+  body {
+    max-height: 100vh;
+  }
   .section {
-    height: auto;
+    /* height: auto; */
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 1.5rem;
